# mini-lakehouse-control-plane-executor

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml
.kiro/specs/mini-lakehouse/: design.md  requirements.md  tasks.md
cmd/coordinator/: main.go
cmd/metad/: main.go
demo/: README.md  demo.sh  fault-tolerance-demo.sh
docker/: Dockerfile.coordinator  Dockerfile.metad  Dockerfile.worker
monitoring/: lakehouse_alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: lakehouse-dashboard.json
pkg/coordinator/: compaction_property_test.go  compaction_service.go  compaction_service_test.go  coordinator_integration_test.go  distributed_query_executor.go  fault_tolerance.go  grpc_service.go  leader_failure_retry_property_test.go  metadata_client.go  metadata_interface.go  query_planner.go  query_planner_test.go  rest_api.go  snapshot_isolation.go  snapshot_isolation_property_test.go  success_manifest_property_test.go  table_service.go  task_reassignment.go  task_scheduler.go  transaction_manager.go  worker_failure_detector.go  worker_manager.go
pkg/metadata/: commit_idempotency_property_test.go  concurrent_commit_property_test.go  service.go  state.go  state_test.go
pkg/observability/: logging.go  metrics.go  observability.go  tracing.go
pkg/storage/: client.go  client_test.go  log_visibility_property_test.go  paths.go  paths_test.go  transaction_log.go  transaction_log_property_test.go  transaction_log_test.go
proto/: common.proto  coordinator.proto  metadata.proto  worker.proto
tests/: README.md  run_chaos_tests.sh  run_integration_tests.sh
tests/chaos/: leader_failure_test.go  worker_failure_test.go
tests/common/: helpers.go  types.go
tests/integration/: golden_query_test.go
worker/: Cargo.toml  build.rs
worker/src/: group_by_property_test.rs  lib.rs  main.rs  observability.rs  parquet_format_property_test.rs  parquet_reader.rs  parquet_writer.rs  proto.rs  task_executor.rs  worker_service.rs
