[workspace]
members = [
    "worker",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
arrow = "49.0"
parquet = "49.0"
arrow-ord = "49.0"
arrow-select = "49.0"
aws-sdk-s3 = "0.39"
aws-config = "0.56"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = "0.21"
prometheus = "0.13"
proptest = "1.4"
chrono = "=0.4.39"