[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
prometheus = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[build-dependencies]
tonic-build = "0.10"