[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker"
path = "src/main.rs"

[lib]
name = "worker"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true }
opentelemetry_sdk = { workspace = true }
prometheus = { workspace = true }
thiserror = "1.0"
arrow-ord = { workspace = true }
arrow-select = { workspace = true }
warp = "0.3"

[dev-dependencies]
tempfile = "3.8"
proptest = { workspace = true }

[build-dependencies]
tonic-build = "0.10"